<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnHome"
        android:icon="@drawable/ic_home"
        android:title="@string/title_main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnOpenBrowser"
        android:title="@string/title_open_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/btnMisc"
        android:title="@string/menu_misc"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/btnDoNothing"
                android:title="@string/title_nothing"/>
            <item android:id="@+id/btn_user_manage"
                android:title="@string/title_user_manage"/>
        </menu>
    </item>

</menu>