<?xml version="1.0" encoding="utf-8"?>
<!-- RelativeLayout:要素の位置を相対的に決める -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/btnInputFile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/title_view_list"
         />
    <Button
        android:id="@+id/btnDisplayBrowser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnInputFile"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/title_open_browser" />
    <Button
        android:id="@+id/btnNothing"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDisplayBrowser"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/title_nothing" />

</RelativeLayout>